[gd_scene load_steps=3 format=2]

[ext_resource path="res://nodes/state_handlers/player/state_handler.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/state_handlers/player/crawling_handler.gd" type="Script" id=2]

[node name="crawling_handler" instance=ExtResource( 1 )]

script = ExtResource( 2 )
crawling_speed = 128

[node name="crawl_leave_back_detector" type="RayCast2D" parent="." index="0"]

position = Vector2( -30, -80 )
enabled = false
exclude_parent = true
cast_to = Vector2( 0, -20 )
collision_mask = 1

[node name="crawl_leave_front_detector" type="RayCast2D" parent="." index="1"]

position = Vector2( 30, -80 )
enabled = true
exclude_parent = true
cast_to = Vector2( 0, -20 )
collision_mask = 1

[node name="crawl_detector_up" type="RayCast2D" parent="." index="2"]

position = Vector2( 30, -8 )
enabled = true
exclude_parent = true
cast_to = Vector2( 128, 0 )
collision_mask = 1

[node name="crawl_detector_down" type="RayCast2D" parent="." index="3"]

position = Vector2( 30, 24 )
enabled = true
exclude_parent = true
cast_to = Vector2( 128, 0 )
collision_mask = 1

[node name="crawl_pit_detector" type="RayCast2D" parent="." index="4"]

position = Vector2( 60, 32 )
enabled = true
exclude_parent = true
cast_to = Vector2( 0, 16 )
collision_mask = 1


